# RigidTransformAcd2D

./: Boundingbox.cpp  Boundingbox.h  CMakeLists.txt  ConnectedComponent.cpp  ConnectedComponent.h  Halfplane.cpp  Halfplane.h  INSTALL.txt  README.md  RigidTransform.cpp  RigidTransform.h  Utility.cpp  Utility.h  acd2d_main.cpp  definition.h  polygonalization.cpp  transformDecomShape.cpp
Results/: flower_decomp.eps  flower_poly.eps  flower_result.pgm  flower_shape.eps  flower_tdecomp.eps  flower_tshape.eps  hand_decomp.eps  hand_poly.eps  hand_res.pgm  hand_shape.eps  hand_tdecomp.eps  hand_tshape.eps  leaf_decomp.eps  leaf_poly.eps  leaf_result.pgm  leaf_shape.eps  leaf_tdecomp.eps  leaf_tshape.eps  snowflake_decomp.eps  snowflake_poly.eps  snowflake_result.pgm  snowflake_shape.eps  snowflake_tdecomp.eps  snowflake_tshape.eps
Samples/: circle10.pgm  flower.pgm  hand.pgm  leaf.pgm  snowflake.pgm  square21.pgm
src/: acd2d_bridge.h  acd2d_data.h
src/edge_visibility/: acd2d_ev_function.cpp
